--- a/app/partials/itinerary-wpt.html
+++ b/app/partials/itinerary-wpt.html
@@ -30,7 +30,7 @@
           <option ng-repeat="format in georefFormats" value="{{format.key}}">{{format.value}}</option>
         </select>
       </div>
-      <div ng-show="coordFormat !== 'plus+code'">
+      <div ng-show="coordFormat !== 'plus+code' && coordFormat !== 'osgb36'">
         <label for="position-separator">Position ordering and separator:</label>
         <select id="position-separator" ng-model="positionFormat">
           <option value="lat-lng">lat lng</option>
@@ -40,7 +40,7 @@
         </select>
       </div>
       <div>
-        <span id="position-text" tl-coord-format="coordFormat" position-format="positionFormat" lat="data.lat" lng="data.lng"></span>
+        <span id="position-text" tl-coord-format="coordFormat" position-format="positionFormat" lat="data.lat" lng="data.lng" ng-show="!form.position.$error.position && data.position && data.lat && data.lng"></span>
         <span tl-lat-lng="data.position" lat="data.lat" lng="data.lng"></span>
       </div>
       <div>
