--- a/app/partials/itinerary-sharing.html
+++ b/app/partials/itinerary-sharing.html
@@ -33,6 +33,9 @@
           <button id="btn-delete" ng-click="delete()" class="btn btn-lg btn-danger">Delete selected</button>
           <button id="btn-edit" ng-click="edit()" class="btn btn-lg btn-info">Edit selected</button>
           <button id="btn-new" ng-click="new()" class="btn btn-lg btn-warning">New</button>
+          <button id="btn-show-itinerary" ng-click="showItinerary()"
+                  type="button" class="btn btn-lg btn-danger"
+                  ng-show="routing==='itinerary-sharing-report'">Itinerary</button>
           <button id="btn-close" ng-click="cancel()" type="button" class="btn btn-lg btn-danger">Back</button>
         </div>
       </div>
