--- a/app/partials/itinerary-map.html
+++ b/app/partials/itinerary-map.html
@@ -6,6 +6,9 @@
         {{ajaxRequestError.status}}<span>
     </div>
   </div>
+  <div id="map-layers-error" class="map-page-div" ng-messages="mapLayersError">
+    <div class="alert alert-danger" role="alert" ng-message="error">Unable to display the map.  There was an error when attempting to fetching the map configuration.</div>
+  </div>
   <leaflet ng-if="status.showMap" paths="map.paths" controls="map.controls" lf-center="map.center" bounds="map.bounds" layers="map.layers" defaults="map.defaults" lf-draw="map.drawOptions" height="{{map.height}}"></leaflet>
   <div class="text-center map-page-div map-page-buttons">
     <button id="btn-whereami" ng-click="map.center.zoom=16; map.center.autoDiscover=true; ajaxRequestError=null;" type="button" class="btn btn-primary">My position</button>
