--- a/app/partials/map_point.html
+++ b/app/partials/map_point.html
@@ -1,1 +1,4 @@
+<div id="map-layers-error" class="map-page-div" ng-messages="mapLayersError">
+  <div class="alert alert-danger" role="alert" ng-message="error">Unable to display the map.  There was an error when attempting to fetching the map configuration.</div>
+</div>
 <leaflet ng-if="status.showMap" controls="controls" markers="markers" center="center" layers="layers" defaults="defaults" height="{{height}}"></leaflet>
