Replace JS confirmation windows with dialogs

--- a/app/partials/admin_password_reset.html
+++ b/app/partials/admin_password_reset.html
@@ -32,7 +32,15 @@
         </div>
       </div>
       <div>
-        <button id="btn-cancel" type="button" ng-click="cancelEdit(form)" class="btn btn-lg btn-danger">Cancel</button>
+        <button id="btn-cancel"
+                class="btn btn-lg btn-danger"
+                mwl-confirm
+                title="Reset password"
+                message="Cancel?"
+                confirm-text="Yes"
+                cancel-text="No"
+                on-confirm="cancelEdit(form)"
+                >Cancel</button>
         <button id="btn-submit" type="submit" ng-click="resetPassword(form)" class="btn btn-lg btn-success">Save</button>
       </div>
     </form>
