--- a/app/partials/itinerary-route-name.html
+++ b/app/partials/itinerary-route-name.html
@@ -29,10 +29,29 @@
         <p ng-show="data.reverse">The new route will be the reverse of the current one.</p>
       </div>
       <div id="wpt-buttons">
-        <button id="btn-save" ng-click="save(form)" type="submit" class="btn btn-lg btn-success" ng-show="!ajaxRequestError">Save</button>
-        <button id="btn-cancel" ng-click="cancel(form)" type="button" class="btn btn-lg btn-danger">Cancel</button>
-        <button id="btn-reset" ng-click="reset(form)" type="button" class="btn btn-lg btn-danger">Reset</button>
+        <button id="btn-save" ng-click="save(form)" type="submit" class="btn btn-lg btn-success" ng-show="!ajaxRequestError.error">Save</button>
+        <button id="btn-cancel"
+                type="button"
+                class="btn btn-lg btn-danger"
+                mwl-confirm
+                title="Confirm"
+                message="Cancel?"
+                confirm-text="Yes"
+                cancel-text="No"
+                on-confirm="cancel(form)"
+                >Cancel</button>
+        <button id="btn-reset"
+                type="button"
+                class="btn btn-lg btn-danger"
+                mwl-confirm
+                title="Confirm"
+                message="Reset changes?"
+                confirm-text="Yes"
+                cancel-text="No"
+                on-confirm="reset(form)"
+                >Reset</button>
       </div>
+      <p>{{ajaxRequestError}}</p>
     </form>
   </div>
 </div>
