--- a/app/partials/itinerary-sharing.html
+++ b/app/partials/itinerary-sharing.html
@@ -30,7 +30,13 @@
         <div id="div-buttons">
           <button id="btn-activate" ng-click="activate()" class="btn btn-lg btn-success">Activate</button>
           <button id="btn-deactivate" ng-click="deactivate()" class="btn btn-lg btn-primary">Deactivate</button>
-          <button id="btn-delete" ng-click="delete()" class="btn btn-lg btn-danger">Delete selected</button>
+          <button id="btn-delete"
+                  class="btn btn-lg btn-danger"
+                  mwl-confirm
+                  title="Confirm"
+                  message="Delete the selected itinerary shares?"
+                  on-confirm="delete()"
+                  >Delete selected</button>
           <button id="btn-edit" ng-click="edit()" class="btn btn-lg btn-info">Edit selected</button>
           <button id="btn-new" ng-click="new()" class="btn btn-lg btn-warning">New</button>
           <button id="btn-show-itinerary" ng-click="showItinerary()"
@@ -67,7 +73,16 @@
       </div>
       <div id="div-form-buttons">
         <button id="btn-save" ng-click="save(form)" class="btn btn-lg btn-primary">Save</button>
-        <button id="btn-cancel" ng-click="cancelEdit(form)" type="button" class="btn btn-lg btn-danger">Cancel</button>
+        <button id="btn-cancel"
+                type="button"
+                class="btn btn-lg btn-danger"
+                mwl-confirm
+                title="Confirm"
+                message="Cancel?"
+                confirm-text="Yes"
+                cancel-text="No"
+                on-confirm="cancelEdit(form)"
+                >Cancel</button>
       </div>
     </form>
   </div>
