Fix itinerary-edit cancel and reset buttons wrong text

--- a/app/partials/itinerary-edit.html
+++ b/app/partials/itinerary-edit.html
@@ -52,9 +52,9 @@
                 type="button"
                 mwl-confirm
                 title="Confirm"
-                message="Cancel"
-                confirm-button-text="Yes"
-                cancel-button-text="No"
+                message="Cancel?"
+                confirm-text="Yes"
+                cancel-text="No"
                 on-confirm="cancel(form)"
                 >Cancel</button>
         <button id="btn-reset"
@@ -63,8 +63,8 @@
                 mwl-confirm
                 title="Confirm"
                 message="Reset form to original state, losing all your changes"
-                confirm-button-text="Yes"
-                cancel-button-text="No"
+                confirm-text="Yes"
+                cancel-text="No"
                 on-confirm="reset(form)"
                 >Reset</button>
       </div>
