Fix invalid span tag

--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -2,7 +2,7 @@
   <div ng-messages="ajaxRequestError">
     <div class="alert alert-danger" role="alert" ng-message="error">System Error - An
       unexpected error occurred<span ng-show="ajaxRequestError.status">, status code returned is
-        {{ajaxRequestError.status}}<span>
+        {{ajaxRequestError.status}}</span>
     </div>
     <div class="alert alert-warning" role="alert" ng-message="unauthorized">Invalid credentials!</div>
   </div>
