--- a/app/partials/map.html
+++ b/app/partials/map.html
@@ -2,7 +2,7 @@
      ng-show="ajaxRequestError">
   <div class="alert alert-danger" role="alert" ng-message="error">System Error - An
     unexpected error occurred<span ng-show="ajaxRequestError.status">, status code returned is
-      {{ajaxRequestError.status}}<span>
+      {{ajaxRequestError.status}}</span>
   </div>
 </div>
 <div id="map-layers-error" class="map-page-div" ng-messages="mapLayersError">
