--- a/app/partials/gpx-upload.html
+++ b/app/partials/gpx-upload.html
@@ -3,7 +3,7 @@
        ng-show="ajaxRequestError">
     <div class="alert alert-danger" role="alert" ng-message="error">System Error - An
       unexpected error occurred<span ng-show="ajaxRequestError.status">, status code returned is
-        {{ajaxRequestError.status}}<span>
+        {{ajaxRequestError.status}}</span>
     </div>
   </div>
   <div id="system-error" class="map-page-div" ng-messages="fileTooBigError"
