--- a/app/partials/itineraries.html
+++ b/app/partials/itineraries.html
@@ -6,7 +6,7 @@
        ng-show="ajaxRequestError">
     <div class="alert alert-danger" role="alert" ng-message="error">System Error - An
       unexpected error occurred<span ng-show="ajaxRequestError.status">, status code returned is
-        {{ajaxRequestError.status}}<span>
+        {{ajaxRequestError.status}}</span>
     </div>
   </div>
   <div class="alert alert-info" ng-show="itineraries.payload.length === 0">
