--- a/app/partials/itinerary-sharing-report.html
+++ b/app/partials/itinerary-sharing-report.html
@@ -5,7 +5,7 @@
          ng-show="ajaxRequestError">
       <div class="alert alert-danger" role="alert" ng-message="error">System Error - An
         unexpected error occurred<span ng-show="ajaxRequestError.status">, status code returned is
-          {{ajaxRequestError.status}}<span>
+          {{ajaxRequestError.status}}</span>
       </div>
     </div>
     <div class="alert alert-info" ng-show="itineraries.length === 0">
