--- a/app/partials/itinerary.html
+++ b/app/partials/itinerary.html
@@ -4,7 +4,7 @@
          ng-show="ajaxRequestError">
       <div class="alert alert-danger" role="alert" ng-message="error">System Error - An
         unexpected error occurred<span ng-show="ajaxRequestError.status">, status code returned is
-          {{ajaxRequestError.status}}<span>
+          {{ajaxRequestError.status}}</span>
       </div>
     </div>
     <div>
