Make GPX Download button colour consistent for track list and itinerary pages

--- a/app/partials/tracks.html
+++ b/app/partials/tracks.html
@@ -93,7 +93,7 @@
       <button id="btn-tracks" ng-click="doListTracks()" value="Submit" class="btn btn-lg btn-success">List tracks</button>
       <button id="btn-map" ng-click="showMap(tracks.search)" value="Submit" class="btn btn-lg btn-primary">Show map</button>
       <button id="btn-download"
-              class="btn btn-lg btn-primary"
+              class="btn btn-lg btn-success"
               mwl-confirm
               title="GPX Download"
               message="Download tracks?"
