--- a/app/partials/itinerary-track-name.html
+++ b/app/partials/itinerary-track-name.html
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div id="wpt-buttons">
-        <button id="btn-save" ng-click="save(form)" type="submit" class="btn btn-lg btn-success" ng-show="!ajaxRequestError.error">Save</button>
+        <button id="btn-save" ng-click="save(form)" type="submit" class="btn btn-lg btn-success">Save</button>
         <button id="btn-cancel"
                 type="button"
                 class="btn btn-lg btn-danger"
