--- a/app/partials/itinerary.html
+++ b/app/partials/itinerary.html
@@ -57,7 +57,7 @@
           <div uib-accordion-group class="panel-default" heading="Routes{{routeNames.length > 0 ? ' (' + routeNames.length + ')': ''}}" is-open="status.routesOpen" is-disabled="routeNames.length === 0">
             <table id="table-routes" class="itinerary-route-table wide-table table table-striped">
               <tr ng-show="routeNames.length > 1">
-                <th colspan="7">
+                <th colspan="8">
                   <input id="input-select-all-routes" ng-click="selectAllRoutes()" type="checkbox" ng-model="selection.allRoutesSelected" />
                   <label for="input-select-all-routes" class="select-all-option">Select all routes</label>
                 </th>
@@ -67,6 +67,7 @@
                   <input id="input-route-{{route.id}}" type="checkbox" ng-model="route.selected" />
                   <label for="input-route-{{route.id}}"><span ng-show="!route.name">ID: {{route.id}}</span>{{route.name}}</label>
                 </td>
+                <td>{{route.color}}</td>
                 <td style="text-align: right;"><span ng-show="route.distance">{{route.distance | number:1}} km</span></td>
                 <td style="text-align: right;"><span ng-show="route.distance">{{route.distance / 1.609344 | number:1}} mi</span></td>
                 <td><span ng-show="route.highest">↗︎{{route.ascent | number:0}}&nbsp;m ↘︎{{route.descent | number:0}}&nbsp;m</span></td>
